# mubot

./: .gitignore  .ruff.toml  README.md  flake.nix  pylint.toml  pyproject.toml
mubot/: __init__.py  __main__.py
mubot/ollama/: __init__.py  tools.py
scripts/: lint.sh
